# code-injection-app

./: .gitignore  index.html  measure-difficulty.mjs  measure-grammar.mjs  package-lock.json  package.json  test-analyzer.mjs  test-background.mjs  test-charmodel.mjs  test-difficulty-smoke.mjs  test-difficulty.mjs  test-e2e.mjs  test-entry.ts  test-heatmap.mjs  test-hud.mjs  test-ranking.mjs  test-replay.mjs  test-rhythm.mjs  test-settings.mjs  test-sound.mjs  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yml
.test/: analyzer.bundle.mjs  difficulty.bundle.mjs  entry.bundle.mjs
difficulty-engine/: BUILD.md  Cargo.toml
difficulty-engine/src/: cost.rs  lib.rs
public/grammars/: javascript.wasm  python.wasm  tsx.wasm  typescript.wasm
samples/: api_client.ts  beginner.py  kinematics.lean  validators.js
server/: ng_words.php  rank.php  test-rank.mjs
server/data/: .htaccess
src/: analyzer.ts  background.ts  charModel.ts  difficulty.ts  ghost.ts  heatmap.ts  hud.ts  input.ts  loader.ts  main.ts  ranking.ts  rankingUI.ts  replay.ts  rhythm.ts  settings.ts  sound.ts  soundModel.ts  storage.ts  styles.css  types.ts  vite-env.d.ts
src/wasm/difficulty/: difficulty_engine.d.ts  difficulty_engine.js  difficulty_engine_bg.wasm  difficulty_engine_bg.wasm.d.ts
